# speedwing

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
assets/levels/: 0.txt  1.txt  2.txt
assets/shaders/: grid.wgsl  particles.wgsl
src/: common.rs  editor.rs  game.rs  grid.rs  grid_map.rs  input.rs  levels.rs  main.rs  menu.rs  particles.rs  player.rs  raycast.rs  render.rs  text_asset.rs
web/: index.html
