[package]
name = "speedwing"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_fix_cursor_unlock_web = "0.3.0"
noise = "0.9.0"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["2d", "webgpu"]

[profile.dev]
opt-level = 1

[profile.fast]
inherits = "dev"
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.fast.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"