[package]
name = "speedwing"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bevy_fix_cursor_unlock_web = "0.3.0"
noise = "0.9.0"
rand = "0.10.0"
serde_json = "1.0.149"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde = { version = "1.0.228", features = ["derive"] }
bevy_transform_interpolation = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["2d", "webgpu", "bevy_debug_stepping"]

[profile.dev]
opt-level = 1

[profile.fast]
inherits = "dev"
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.fast.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"
